Prevent scrollbar from flashing before max-height

--- a/extensions/amp-form/0.1/amp-form.css
+++ b/extensions/amp-form/0.1/amp-form.css
@@ -20,7 +20,7 @@ form.amp-form-submit-error [submit-error] {
   display: block;
 }
 
-.i-amphtml-textarea-calculating {
+textarea:not(.i-amphtml-textarea-max) {
   overflow: hidden;
 }
 
